--- a/notebooks/Tarea1.ipynb
+++ b/notebooks/Tarea1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,18 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "#Léemos los datos de entrenamiento del concurso de Kaggle\n",
-    "df = pd.read_csv(\"train.csv\")"
+    "import os\n",
+    "\n",
+    "# Directorio raíz\n",
+    "working_directory = \"C:\\\\Users\\\\javie\\\\OneDrive - INSTITUTO TECNOLOGICO AUTONOMO DE MEXICO\\\\MaestriaEnCienciaDeDatos\\\\4toSemestre\\\\ArquitecturaDeProductosDeDatos\\\\Tareas\\\\Tarea3\\\\APD_tarea_3\"\n",
+    "\n",
+    "# Directorio donde se almacenan los datos\n",
+    "data_directory = os.path.join(working_directory, \"data\")\n",
+    "# Asegurar que el directorio existe\n",
+    "os.makedirs(data_directory, exist_ok=True)\n",
+    "\n",
+    "# Léemos los datos de entrenamiento del concurso de Kaggle\n",
+    "df = pd.read_csv(os.path.join(data_directory,\"train.csv\"))"
    ]
   },
   {
